--- a/app/src/main/res/layout/fragment_message.xml
+++ b/app/src/main/res/layout/fragment_message.xml
@@ -3,24 +3,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center_horizontal"
-    android:padding="16dp"
     android:orientation="vertical"
-    tools:context=".WelcomeFragment">
+    android:padding="16dp"
+    android:gravity="center_horizontal"
+    tools:context=".MessageFragment">
 
-
-    <TextView
+    <!-- TODO: Update blank fragment layout -->
+    <EditText
+        android:id="@+id/message"
         android:layout_width="match_parent"
-        android:gravity="center"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:text="@string/welcome_text"
-        android:textSize="20sp" />
+        android:textSize="20sp"
+        android:text="@string/message_hint"
+        android:inputType="textMultiLine"/>
 
     <Button
-        android:id="@+id/start"
+        android:id="@+id/next"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:text="@string/start" />
+        android:layout_marginTop="20dp"
+        android:text="@string/next" />
+
 </LinearLayout>
